[bug #167138304]fixes grid spacing

--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -358,14 +358,14 @@ nav li a:hover
 {
 	margin: 20px auto 100px;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 	grid-gap: 10px;
 }
 .advert .card
 {
 	position: relative;
 	width: 250px;
-    margin: 20px 40px;
+    margin: 20px 20px;
     transition: transform .5s; 
 	background: rgb(250, 248, 248);
 	padding: 0px;
